2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: About source plugin
    button. Hopefully this should encourage more developers to write source
    plugins :).
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Code to show the about dialog.
    * lib/fantasdic/sources/dict_server.rb: Updates plugin metadata.
    * lib/fantasdic/source_base.rb: More possible metadata.
    * lib/fantasdic/ui/preferences_dialog.rb: Makes dialog modal.
    
    * lib/fantasdic/ui/about_dialog.rb: Removes unused variable, adds a useful
    comment.

2007-10-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb:
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Crashed when server was not
    reachable (exception not properly caught).

2007-10-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Cache methods moved to source_base.rb. This
    way, any source plugin can benefit from the cache system.

    * lib/fantasdic/sources/dict_server.rb:
    * lib/fantasdic/source_base.rb: Better separation of UI and non UI.
    Implements define and match methods.

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Follow above changes.
    
    * lib/fantasdic/ui/main_app.rb: Multiple backends support. Overall it seems
    to work fine but it needs further testing.

2007-10-03 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb:
    * lib/fantasdic/source_base.rb:
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Pass parent dialog and
    on_databases_updated callback to config_widget instead of constructor.

2007-10-02 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb: Ensures that database list has not
    been updated already when focus-out-event is triggered. Generates the
    config widget on config_widget, not on initialize.

2007-09-30 Mathieu Blondel <mblondel@svn.gnome.org>
